Material viewport shading receives light from light sources on other layers when they have a texture assigned #42074

Closed
opened 2014-10-04 19:39:22 +02:00 by Andrej Ivanis · 10 comments

System Information
10.9.5
MacBook Pro Retina, Mid 2012

Blender Version
Broken: 2.72 RC

Exact steps for others to reproduce the error
Open the file and you will see that light source is on layer 1 and object is on layer 2. Only layer 2 is active so the light source shouldn't influence the viewport, but it does. This happens only when light source has a texture assigned. light_bug.blend

**System Information** 10.9.5 MacBook Pro Retina, Mid 2012 **Blender Version** Broken: 2.72 RC **Exact steps for others to reproduce the error** Open the file and you will see that light source is on layer 1 and object is on layer 2. Only layer 2 is active so the light source shouldn't influence the viewport, but it does. This happens only when light source has a texture assigned. [light_bug.blend](https://archive.blender.org/developer/F114859/light_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @aivanis

Added subscriber: @aivanis
Bastien Montagne self-assigned this 2014-10-06 14:49:01 +02:00

Added subscribers: @Sergey, @Psy-Fi

Added subscribers: @Sergey, @Psy-Fi

This simple patch fixes it:

P153: #42074

diff --git a/source/blender/gpu/intern/gpu_material.c b/source/blender/gpu/intern/gpu_material.c
index 81dcd9c..c613040 100644
--- a/source/blender/gpu/intern/gpu_material.c
+++ b/source/blender/gpu/intern/gpu_material.c
@@ -677,7 +677,9 @@ static void shade_light_textures(GPUMaterial *mat, GPULamp *lamp, GPUNodeLink **
 				GPU_image(mtex->tex->ima, &mtex->tex->iuser, false),
 				GPU_dynamic_uniform((float*)lamp->dynpersmat, GPU_DYNAMIC_LAMP_DYNPERSMAT, lamp->ob),
 				&tex_rgb);
-			texture_rgb_blend(mat, tex_rgb, *rgb, GPU_uniform(&one), GPU_uniform(&mtex->colfac), mtex->blendtype, rgb); 
+			texture_rgb_blend(mat, tex_rgb, *rgb,
+			                  GPU_dynamic_uniform((float*)&lamp->dynenergy, GPU_DYNAMIC_LAMP_DYNENERGY, lamp->ob),
+			                  GPU_uniform(&mtex->colfac), mtex->blendtype, rgb);
 		}
 	}
 }

Not really at ease with OGL, though, so Sergey or Antony, need your blessing here. :)

This simple patch fixes it: [P153: #42074](https://archive.blender.org/developer/P153.txt) ``` diff --git a/source/blender/gpu/intern/gpu_material.c b/source/blender/gpu/intern/gpu_material.c index 81dcd9c..c613040 100644 --- a/source/blender/gpu/intern/gpu_material.c +++ b/source/blender/gpu/intern/gpu_material.c @@ -677,7 +677,9 @@ static void shade_light_textures(GPUMaterial *mat, GPULamp *lamp, GPUNodeLink ** GPU_image(mtex->tex->ima, &mtex->tex->iuser, false), GPU_dynamic_uniform((float*)lamp->dynpersmat, GPU_DYNAMIC_LAMP_DYNPERSMAT, lamp->ob), &tex_rgb); - texture_rgb_blend(mat, tex_rgb, *rgb, GPU_uniform(&one), GPU_uniform(&mtex->colfac), mtex->blendtype, rgb); + texture_rgb_blend(mat, tex_rgb, *rgb, + GPU_dynamic_uniform((float*)&lamp->dynenergy, GPU_DYNAMIC_LAMP_DYNENERGY, lamp->ob), + GPU_uniform(&mtex->colfac), mtex->blendtype, rgb); } } } ``` Not really at ease with OGL, though, so Sergey or Antony, need your blessing here. :)

This is not so good, colors are already multiplied by the energy (lamp->dyncol is calculated form lamp->col which is premultiplied by the energy), so if we do that, we will get the multiplication twice. Solution is to do the multiplication after texture application in the shader.

This is not so good, colors are already multiplied by the energy (lamp->dyncol is calculated form lamp->col which is premultiplied by the energy), so if we do that, we will get the multiplication twice. Solution is to do the multiplication after texture application in the shader.
Bastien Montagne was unassigned by Antonis Ryakiotakis 2014-10-07 10:48:39 +02:00
Antonis Ryakiotakis self-assigned this 2014-10-07 10:48:39 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 14c57b6c78

This issue was referenced by 14c57b6c783302a86175412d6f4abf70408f19d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 14c57b6c78.

Closed by commit 14c57b6c78.

This issue was referenced by 61eac8c453

This issue was referenced by 61eac8c4533254682e2d85bf7cbbb6aa252e7bf5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42074
No description provided.